--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                         <div class="btn">
                             <i class="fa-brands fa-whatsapp fa-xl">  <p>Whats<strong>App</strong></p></i>
                             <button>
-                                <a href="#">Fale <strong>Conosco</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Fale <strong>Conosco</strong></a>
                             </button>
                             <i class="fa-solid fa-map-pin fa-xl"><p>Ir <strong>Para</strong></p></i> 
                             <button>
-                                <a href="#">Pelotas</a>
+                                <a href="https://www.google.com/maps/place/Colonial+Implementos+-+GTS/@-31.6585934,-52.3414867,17z/data=!3m1!4b1!4m6!3m5!1s0x95104bb6919f23c1:0x7183a646ebb2c1fc!8m2!3d-31.6585934!4d-52.3389064!16s%2Fg%2F11g03rc_p0?entry=ttu&g_ep=EgoyMDI1MDgwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Pelotas</a>
                             </button>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="pelotas">
                     <div class="pel"><img src="./Imagens/pelotas.png" alt=""></div>
                     <div class="about-pelotas">
-                        <p> <strong>Pelotas</strong> | Rio Grande do Sul <br>
+                        <p> <strong>Camaquã</strong> | Rio Grande do Sul <br>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ullam iusto distinctio in, aliquid, voluptate cumque rem architecto voluptatum illum, provident magnam! Quibusdam odit voluptas quisquam similique odio, molestiae quasi!
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis id placeat repellendus ipsa voluptatum eligendi, soluta iste laudantium nostrum dolorem labore numquam esse. Facere repellat exercitationem nam consequatur eveniet quasi.
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nulla, magni qui laboriosam corporis esse cumque eveniet reiciendis in alias mollitia dolor delectus non ad! Obcaecati fuga assumenda eligendi accusantium!</p>
@@ -117,11 +117,11 @@
                         <div class="btn">
                             <i class="fa-brands fa-whatsapp fa-xl">  <p>Whats<strong>App</strong></p></i>
                             <button>
-                                <a href="#">Fale <strong>Conosco</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Fale <strong>Conosco</strong></a>
                             </button>
                             <i class="fa-solid fa-map-pin fa-xl"><p>Ir <strong>Para</strong></p></i> 
                             <button>
-                                <a href="#">Pelotas</a>
+                                <a href="https://www.google.com/maps/place/Colonial+Implementos+-+GTS/@-31.6585934,-52.3414867,17z/data=!3m1!4b1!4m6!3m5!1s0x95104bb6919f23c1:0x7183a646ebb2c1fc!8m2!3d-31.6585934!4d-52.3389064!16s%2Fg%2F11g03rc_p0?entry=ttu&g_ep=EgoyMDI1MDgwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Pelotas</a>
                             </button>
                         </div>
                     </div>
@@ -332,15 +332,15 @@
                             </div>
                             <div class="address-container">
                                 <h1>Endereços</h1>
-                                <a href="https://www.instagram.com/colonialimplementosagricolas"><span><strong>Pelotas</strong> - BR 116, KM 515 - Vila Princesa</span></a><br>
-                                <a href="https://www.facebook.com/colonialimplementosagricolas"><span><strong>Camaquã</strong> - Av. Conego Luiz Walter hanquet, 1537</span></a>
+                                <a href="https://www.google.com/maps/place/Colonial+Implementos+-+GTS/@-31.6585934,-52.3414867,17z/data=!3m1!4b1!4m6!3m5!1s0x95104bb6919f23c1:0x7183a646ebb2c1fc!8m2!3d-31.6585934!4d-52.3389064!16s%2Fg%2F11g03rc_p0?entry=ttu&g_ep=EgoyMDI1MDgwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank"><span><strong>Pelotas</strong> - BR 116, KM 515 - Vila Princesa</span></a><br>
+                                <a href="https://www.google.com/maps/place/Colonial+Implementos+-+GTS/@-31.6585934,-52.3414867,17z/data=!3m1!4b1!4m6!3m5!1s0x95104bb6919f23c1:0x7183a646ebb2c1fc!8m2!3d-31.6585934!4d-52.3389064!16s%2Fg%2F11g03rc_p0?entry=ttu&g_ep=EgoyMDI1MDgwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank"><span><strong>Camaquã</strong> - Av. Conego Luiz Walter hanquet, 1537</span></a>
                             </div>
                             <div class="address-container">
                                 <h1>Parceiros</h1>
-                                <a href="#"><img src="./Imagens/logoShadow.svg" alt=""></a>
-                                <a href="#"><img src="./Imagens/logoShadow.svg" alt=""></a>
-                                <a href="#"><img src="./Imagens/logoShadow.svg" alt=""></a>
-                                <a href="#"><img src="./Imagens/logoShadow.svg" alt=""></a>
+                                <a href="https://gtsdobrasil.ind.br/" target="_blank"><img src="./Imagens/gts.svg" alt=""></a>
+                                <a href="https://pvtagriculture.com.br/" target="_blank"><img src="./Imagens/pvt.png" alt=""></a>
+                                <a href="https://www.budnytratores.com.br/" target="_blank"><img src="./Imagens/budny-preto.png" alt=""></a>
+                                <a href="https://www.rodimaq.com.br/" target="_blank"><img src="./Imagens/rodimaq.png" alt=""></a>
                             </div>
                         </div>
                 </div>
@@ -378,7 +378,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -407,7 +407,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -436,7 +436,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -465,7 +465,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -512,7 +512,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -541,7 +541,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -570,7 +570,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -599,7 +599,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -644,7 +644,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -673,7 +673,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -702,7 +702,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
@@ -731,7 +731,7 @@
                     <div class="info-product">
                         <div class="btn">
                             <button>
-                                <a href="#">Quero <strong>Comprar</strong></a>
+                                <a href="https://wa.me/5553999928979" target="_blank">Quero <strong>Comprar</strong></a>
                             </button>
                         </div>
                     </div>
